--- a/ex7. VXLAN Route/configs/leaf2.cfg
+++ b/ex7. VXLAN Route/configs/leaf2.cfg
@@ -28,6 +28,7 @@ interface lo 2
   ip router ospf underlay area 0.0.0.0
 interface lo 3
   ip address 172.16.2.1/32
+  ip address 172.31.255.1/32 secondary
   ip router ospf underlay area 0.0.0.0
 
 interface ethernet 1/1-2
@@ -35,11 +36,6 @@ interface ethernet 1/1-2
   medium p2p
   ip unnumbered lo 1
   ip router ospf underlay area 0.0.0.0
-  no shutdown
-
-interface ethernet 1/5
-  switchport mode trunk
-  switchport trunk allowed vlan all
   no shutdown
 
 interface nve1
@@ -82,3 +78,39 @@ interface Vlan2030
   no shutdown
   vrf member router20to30
   ip forward
+
+feature lacp
+feature vpc
+
+vrf context VPC
+vpc domain 1
+  peer-keepalive destination 10.255.255.1 source 10.255.255.2 vrf VPC
+
+interface Ethernet1/3
+  no switchport
+  vrf member VPC
+  ip address 10.255.255.2/24
+  no shutdown
+
+interface Ethernet1/4
+  channel-group 100 mode active
+
+interface Ethernet1/6
+  channel-group 100 mode active
+
+interface port-channel100
+  description vpc-peer
+  switchport mode trunk
+  switchport trunk allowed vlan all
+  vpc peer-link
+  no shutdown
+
+interface Ethernet1/5
+  channel-group 200 mode active
+
+interface port-channel200
+  description client1-lacp
+  switchport mode trunk
+  switchport trunk allowed vlan all
+  vpc 200
+  no shutdown
