--- a/ex7. VXLAN Route/configs/client1.cfg
+++ b/ex7. VXLAN Route/configs/client1.cfg
@@ -18,3 +18,18 @@ interface vlan 20
   no shutdown
 
 ip route 0.0.0.0/0 192.168.20.1
+
+feature lacp
+feature vpc
+
+interface Ethernet1/1
+  channel-group 200 mode active
+
+interface Ethernet1/2
+  channel-group 200 mode active
+
+interface port-channel200
+  description client1-lacp
+  switchport mode trunk
+  switchport trunk allowed vlan all
+  no shutdown
